--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.8",
-        "alpinejs": "^3.4.2",
+        "alpinejs": "^3.10.5",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
@@ -17,6 +17,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "dotenv": "^16.0.3"
+        "@alpinejs/focus": "^3.10.5",
+        "dotenv": "^16.0.3",
+        "humbleicons": "^1.9.0"
     }
 }
