--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "dependencies": {
         "@alpinejs/focus": "^3.10.5",
-        "dotenv": "^16.0.3",
-        "humbleicons": "^1.9.0"
+        "boxicons": "^2.1.4",
+        "dotenv": "^16.0.3"
     }
 }
